--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-
+    <h1>Titulo</h1>
+    <button onclick = "func()">prueba </button>
 
 
     <script src="./assets/js/script.js"></script>
