--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     
 
-
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi laborum voluptates commodi? Asperiores quibusdam non, fuga hic minus labore magni maxime cum. Ut, repellat ad animi fugit ex at voluptas?
+    </p>
 
     <script src="./assets/js/script.js"></script>
 </body>
