--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </p>
 
     <button onclick = "func()">prueba </button>
+
+    <footer>Footer</footer>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
